# repeater_bot

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.tg  default.env  docker-compose.yml  loggingconfig.conf  pyproject.toml
practice/: client.py  server.py  validation.py
service/app/: __main__.py  main.py  schemas.py
service/database/: db_connect.py  db_crud.py  db_models.py
service/logging/: log_conf.py
service/tg_bot/: telegram_bot.py  telegram_response.py
