[tool.poetry]
name = "repeater_bot"
version = "0.1.0"
description = "Telegram bot for learning foreign words"
authors = ["Valentine Makarov <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
pgcli = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
