[tool.poetry]
name = "repeater_bot"
version = "0.1.0"
description = ""
authors = ["Valentine Makarov <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.35"
fastapi = "^0.75.1"
uvicorn = {extras = ["standart"], version = "^0.17.6"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
