[tool.poetry]
name = "repeater_bot"
version = "0.1.0"
description = ""
authors = ["Valentine Makarov <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.35"
fastapi = "^0.75.1"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-telegram-bot = {extras = ["socks"], version = "^13.13"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
